# embedded-counter

./: README.md
ecounter/: CMakeLists.txt  ec.h
ecounter/script/: ec.gdb  parse.py
ecounter/src/: ec_api.c
ecounter/test/: simple.cc
